Fix footer z-index

--- a/assets/css/body.css
+++ b/assets/css/body.css
@@ -9,13 +9,13 @@ div#particles {
   width: 100%;
   height: 100%;
   position: fixed;
-  top: 0;
   z-index: 0;
 }
 
 div#content {
   width: 100%;
   height: 100%;
+  position: relative;
   z-index: 1;
 }
 
