--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -8,6 +8,7 @@
 footer {
   min-height: 100px;
   margin-top: 100px;
+  z-index: 1000;
 }
 
 footer a {
